(Bug 5073) Fix the nav search alignment
* adds space to the right
* remove styling from form elements, make them the same height
* remove alignmen as columns. We don't need the extra alignment /
  spacing within the header search itself

--- a/htdocs/scss/schemes/_nav.scss
+++ b/htdocs/scss/schemes/_nav.scss
@@ -93,23 +93,24 @@
         line-height: $header-height - $base-line-height;
     }
 
-    .nav-search {
-        input, select {
-            display: inline-block;
-        }
-    }
-
     #header-search {
         position: absolute;
         top: $header-height + $search-offset;
-        right: 0;
+        right: 2em;
 
         ul {
             list-style: none;
+            margin-bottom: 0;
         }
+    }
 
-        input {
+    .nav-search {
+        input, select {
             margin: 0;
+            padding: 0;
+            height: auto;
+            width: auto;
+            display: inline-block;
         }
     }
 
