--- a/htdocs/scss/schemes/_skin-colors.scss
+++ b/htdocs/scss/schemes/_skin-colors.scss
@@ -31,10 +31,6 @@ nav {
  * Form elements
  */
 
-select {
-    @include form-element;
-}
-
 .submit {
     @extend .button;
  }
