--- a/htdocs/scss/schemes/gradation/_gradation-base.scss
+++ b/htdocs/scss/schemes/gradation/_gradation-base.scss
@@ -98,6 +98,10 @@ ul { list-style: circle; }
     }
 }
 
+.nav-search {
+    line-height: $topbar-height;
+}
+
 /**
  * #content
  */
